--- a/example/src/index.css
+++ b/example/src/index.css
@@ -3,6 +3,17 @@
   padding: 0;
 }
 
+h1 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 2rem;
+}
+
+h2 {
+  text-align: center;
+  margin: 2rem;
+}
+
 .main-container {
   display: flex;
   align-items: row;
@@ -14,29 +25,65 @@
   align-items: center;
   height: 100vh;
   width: 50vw;
-  background: rgb(232, 222, 207);
+  background: rgb(228, 216, 197);
   background: linear-gradient(
     0deg,
-    rgba(232, 222, 207, 1) 2%,
+    rgba(228, 216, 197, 1) 2%,
     rgba(255, 255, 255, 1) 100%
   );
 }
 
 .right-container {
-  background-color: hotpink;
-  width: 50vw;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  width: 50vw;
+  background: rgb(228, 216, 197);
+  background: linear-gradient(
+    0deg,
+    rgba(228, 216, 197, 1) 2%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
-  padding: 2rem;
+.article-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10rem;
+}
+
+.article-label {
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.article-input {
+  width: 500px;
+  padding: 0.5rem;
+  border: none;
+  margin-top: 0.7rem;
+  outline: none;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.button {
+  padding: 1.5rem 2rem;
   margin: 1rem;
+  border: none;
+  font-weight: bold;
+  font-size: 1rem;
+  background-color: #dddddd;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
 }
 
 .next {
   align-self: flex-end;
-  justify-self: flex-end;
 }
