--- a/example/src/index.css
+++ b/example/src/index.css
@@ -42,7 +42,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: auto;
+  overflow-y: auto;
   width: 50vw;
   height: 100vh;
   background: rgb(228, 216, 197);
@@ -229,5 +229,56 @@ select {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2rem;
+}
+
+/* code snippet */
+
+.code_snippet {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40vw;
+  border: 2px solid #bbbb;
+  background-color: #ffff;
+  font-size: 16px;
+  font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
+    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
+    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
+    monospace;
+  text-align: left;
+  padding: 2rem 1rem;
+  margin: 3rem 0;
+}
+
+.code_snippet pre {
+  overflow-x: auto;
+  tab-size: 2;
+}
+
+/* intro  */
+
+.intro {
+  font-family: 'Trispace';
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: 2px solid #bbbb;
+  line-height: 1.5rem;
+  width: 40vw;
+  padding: 2rem 1rem;
+  margin-top: 5rem;
+  font-size: 18px;
+}
+
+.intro_span {
+  border: 1px solid #cccccc;
+  font-weight: bold;
+  padding: 0.5rem;
+  text-align: center;
+  margin: 1rem 0;
+}
+
+.intro_welcome {
+  text-align: center;
+  margin-bottom: 1rem;
 }
